--- a/ColorCode.HTML/ColorCode.HTML.csproj
+++ b/ColorCode.HTML/ColorCode.HTML.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFrameworks>netstandard1.4;netstandard2.0</TargetFrameworks>
     <RootNamespace>ColorCode</RootNamespace>
     <AssemblyName>ColorCode.HTML</AssemblyName>
     <Title>ColorCode.HTML</Title>
